--- a/www/index.html
+++ b/www/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE HTML><head>
 
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/splash/splash-icon.png">
+<!--<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/splash/splash-icon.png">
 <link rel="apple-touch-icon-precomposed" sizes="180x180" href="img/splash/splash-icon-big.png">
 <link rel="apple-touch-startup-image" href="img/splash/splash-screen.png" 	media="screen and (max-device-width: 320px)" />  
 <link rel="apple-touch-startup-image" href="img/splash/splash-screen@2x.png" media="(max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" /> 
 <link rel="apple-touch-startup-image" href="img/splash/splash-screen-six.png" media="(device-width: 375px)">
-<link rel="apple-touch-startup-image" href="img/splash/splash-screen-six-plus.png" media="(device-width: 414px)">
+<link rel="apple-touch-startup-image" href="img/splash/splash-screen-six-plus.png" media="(device-width: 414px)">-->
+
 <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300" rel="stylesheet">
 
 
-
 <title>Regionale Suche</title>
-
-
-
 
 
 <link href="css/style.css"     		 rel="stylesheet" type="text/css">
