--- a/www/location-detail.html
+++ b/www/location-detail.html
@@ -60,15 +60,11 @@
         <!-- Left Sidebar -->
         <div class="snap-drawer snap-drawer-left">
             <a href="index.html"  class="selected-item"><i class="fa fa-home"></i>Home</a>
-            <a href="#"><i class="fa fa-heart"></i>Favoriten</a>
+            <a href="favorite.html"><i class="fa fa-heart"></i>Favoriten</a>
             <a href="rezepte.html"><i class="fa fa-book"></i>Rezepte</a>
             <a href="#"><i class="fa fa-comment"></i>Laden vorschlagen</a>
             <a href="#"><i class=""></i></a>
             <a href="#"><i class="fa fa-envelope-o"></i>Kontakt</a>
-            <!-- <a href="#"><i class="fa fa-facebook"></i>Like Us</a>
-             <a href="#"><i class="fa fa-twitter"></i>Follow Us</a>
-             <a href="#"><i class="fa fa-google-plus"></i>Follow us</a>
-             <a href="#" class="show-share-bottom"><i class="fa fa-retweet"></i>Share</a>-->
             <a href="#" class="sidebar-close"><i class="fa fa-times"></i>Close</a>
         </div>
     </div>
@@ -171,25 +167,20 @@
                         </li>
                     </ul>
 
-
                     <div class="spacer">
                         <div class="spacer-line"></div>
                     </div>
 
-
-
-
                 </div>
             </div>
         </div>
+
         <div class="no-padding">
             <div id="map" class="location-map" ></div>
         </div>
-        <div class="content"></div>
-        <!-- Page Footer-->
-        <div class="footer">
 
-        </div>    
+
+        <div class="footer"></div>
         
     </div>
     
