--- a/www/rezepte.html
+++ b/www/rezepte.html
@@ -60,15 +60,11 @@
         <!-- Left Sidebar -->
         <div class="snap-drawer snap-drawer-left">
             <a href="index.html"  class="selected-item"><i class="fa fa-home"></i>Home</a>
-            <a href="#"><i class="fa fa-heart"></i>Favoriten</a>
+            <a href="favorite.html"><i class="fa fa-heart"></i>Favoriten</a>
             <a href="rezepte.html"><i class="fa fa-book"></i>Rezepte</a>
             <a href="#"><i class="fa fa-comment"></i>Laden vorschlagen</a>
             <a href="#"><i class=""></i></a>
             <a href="#"><i class="fa fa-envelope-o"></i>Kontakt</a>
-            <!-- <a href="#"><i class="fa fa-facebook"></i>Like Us</a>
-             <a href="#"><i class="fa fa-twitter"></i>Follow Us</a>
-             <a href="#"><i class="fa fa-google-plus"></i>Follow us</a>
-             <a href="#" class="show-share-bottom"><i class="fa fa-retweet"></i>Share</a>-->
             <a href="#" class="sidebar-close"><i class="fa fa-times"></i>Close</a>
         </div>
     </div>
@@ -116,12 +112,6 @@
                     </div>
                 </div>
 
-                <!--    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>-->
                 <div class="modal-body">
                     <div class="test">
                         <form action="search-results.html" method="get">
@@ -197,74 +187,15 @@
                             </div>
                         </a>
                     </div>
-
-                 <!--   <div class="card search-result-card">
-                        <a href="index.html" class="fill-div">
-                            <div class="search-result-card-img-box">
-                                <div class="search-result-card-img">
-                                <span class="text">
-                                    <p>1,2</p>
-                                    <p>km</p>
-                                </span>
-                                </div>
-                            </div>
-                            <div class="search-result-card-body card-body">
-                                <h1 class="header-1">Spargelhof</h1>
-                                <div class="content-section">
-                                    <p class="content-p">
-                                        Lorem ipsum dolor sit amet, consete tur sadipscing elitr, sed diam nonumy eirmod.
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="card search-result-card">
-                        <a href="index.html" class="fill-div">
-                            <div class="search-result-card-img-box">
-                                <div class="search-result-card-img">
-                                <span class="text">
-                                    <p>1,2</p>
-                                    <p>km</p>
-                                </span>
-                                </div>
-                            </div>
-                            <div class="search-result-card-body card-body">
-                                <h1 class="header-1">Spargelhof</h1>
-                                <div class="content-section">
-                                    <p class="content-p">
-                                        Lorem ipsum dolor sit amet, consete tur sadipscing elitr, sed diam nonumy eirmod.
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>-->
-
                 </div>
             </div>
         </div>
 
-        <div class="content"></div>
         <!-- Page Footer-->
-        <div class="footer">
-
-        </div>    
+        <div class="footer"></div>
         
     </div>
-    
 
 </div>
-
-
-<script>
-    var swiper = new Swiper('.swiper-container', {
-        slidesPerView: 2,
-        spaceBetween: 10,
-        pagination: {
-            el: '.swiper-pagination',
-            clickable: true,
-        },
-    });
-</script>
 </body>
 
