- Filter modal weiter gemacht

--- a/www/location-detail.html
+++ b/www/location-detail.html
@@ -115,8 +115,8 @@
 
                     <div class="panel panel-default">
                         <div class="panel-heading" id="heading-Two" role="tab">
-                            <h4 class="panel-title">
-                                <a aria-expanded="true" aria-controls="Two" href="#category" data-toggle="collapse">
+                            <h4 class="panel-title ">
+                                <a class="category-list-title" aria-expanded="true" aria-controls="Two" href="#category" data-toggle="collapse">
                                     Kategorien
                                 </a>
                                 <span class="badge"><i class="fa fa-arrow-down"></i></span>
