--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300" rel="stylesheet">
 
 
-<title>Regionale Suche</title>
+<title>Regionale Suche   test</title>
 
 
 <link href="css/style.css"     		 rel="stylesheet" type="text/css">
